Update to bio html

--- a/Basic-HTML-Bio.html
+++ b/Basic-HTML-Bio.html
@@ -16,26 +16,26 @@
   <li><b>Email:</b><a href="mailto:jamesmcarter@gmail.com?subject=UCSD DS&V bio page mail">jamesmcarter@gmail.com</a></li>  <li><b>LinkeIN:</b><a href="www.linkedin.com/in/jmc39">LinkedIN</a></li>
   <li><b>GitHub IO:</b><a href="https://jmc39.github.io/">GitHub jmc39</a></li> 
 </ul>
-<table>
+<table border="1">
 <tr>
   <th>Books</th>
   <th>Movies</th>
   <th>Games</th>
 </tr>
 <tr>
-<td>James</td>
-<td>Enjoys</td>
-<td>Movies</td>
+<td>Boys on the Boat</td>
+<td>Double Helix</td>
+<td>Fire Next Time</td>
 </tr>
 <tr>
-<td>Fight</td>
-<td>Club</td>
-<td>And</td>
+<td>Fight Club</td>
+<td>Coming to America</td>
+<td>Black Panther</td>
 </tr>
 <tr>
-<td>Coming</td>
-<td>to</td>
-<td>America</td>
+<td>Legend of Zelda</td>
+<td>Dominoes</td>
+<td>Go Fish!</td>
 </tr>
   
 </table>
